cabal-version:      3.0
name:               priceof
version:            0.1.0.0
synopsis:           Simple script to delete files

homepage:

license:            NONE
author:             ltsdw
maintainer:         ltsdw

extra-source-files: CHANGELOG.md

executable priceof
    main-is:          priceof.hs

    build-depends:    base          ^>= 4.14.1.0,
                      bytestring    ^>= 0.10.12.0,
                      containers    ^>= 0.6.2.1,
                      http-conduit  ^>= 2.3.8,
                      aeson         ^>= 1.5.6.0,
                      text          ^>= 1.2.4.1

    hs-source-dirs:   src
    default-language: Haskell2010
